--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "underscore": "1.5.2",
-    "mongodb": "2.0.35"
+    "mongodb": "2.0.35",
+    "mongoose": "4.0.3"
   }
 }
